--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
